2015-06-29  Sherine Awad  <drmahmoud@ucdavis.edu>

   * Fix bug in naming in interleave-reads.py
   * Add a test function for the new behavior
   * Add 3 test files needed for the testing

2015-06-28  Jacob Fenton  <bocajnotnef@gmail.com>

   * tests/test_sandbox_scripts.py: made error more informative and not crashy
   * sandbox/{estimate_optimal_hash,optimal_args_hashbits}.py: minor cleanups

2015-06-28  Qingpeng Zhang  <qingpeng@msu.edu>

   * sandbox/{estimate_optimal_hash,optimal_args_hashbits}.py: added sandbox 
   methods for estimating memory usage based on desired fp rate, etc.

2015-06-27  Kevin Murray  <spam@kdmurray.id.au>

   * README.rst: Fix link to virtualenv installation instructions.

2015-06-19  Titus Brown  <titus@idyll.org>

   * khmer/__init__.py: split CountingHash into _CountingHash (CPython) and
   CountingHash to mimic Hashbits behavior; pass IOError through
   extract_countinghash_info and extract_hashbits_info so that
   file-does-not-exist errors are correctly reported; fixed FP rate reporting;
   changed to using get_n_primes_near_x to build hashtable sizes; removed
   get_n_primes_above_x, new_hashbits, and new_counting_hash functions.
   * khmer/_khmer.cc: changed tp_flags for KCountingHash so that it could
   be a base class.
   * khmer/khmer_args.py: removed environment variable override for hash size
   defaults; added -M/--max_memory_usage, and functions create_nodegraph()
   and create_countgraph().  Also renamed --min-tablesize to --max-tablesize.
   * khmer/kfile.py: fixed check_space_for_hashtable to depend on args obj.
   * oxli/build_graph.py, scripts/{annotate-partitions.py,count-overlap.py,
   do-partition.py,filter-stoptags.py,
   merge-partitions.py}, sandbox/{assembly-diff.py,assembly-diff-2.py,
   bloom-count-intersection.py,bloom-count.py,build-sparse-graph.py,
   collect-reads.py,saturate-by-median.py, graph-size.py,print-stoptags.py,
   print-tagset.py,stoptags-by-position.py, subset-report.py,