@@ -195,17 +195,17 @@ def report_on_config(args, hashtype='countgraph'):
         print_error(
             "Estimated memory usage is {0:.2g} bytes "
             "(n_tables x max_tablesize)".format(
-                args.n_tables * args.max_tablesize))
+                args.n_tables * tablesize))
     elif hashtype == 'nodegraph':
         print_error(
             "Estimated memory usage is {0:.2g} bytes "
             "(n_tables x max_tablesize / 8)".format(args.n_tables *
-                                                    args.max_tablesize / 8)
+                                                    tablesize / 8)
         )
 
     print_error("-" * 8)
 
-    if DEFAULT_MAX_TABLESIZE == args.max_tablesize and \
+    if DEFAULT_MAX_TABLESIZE == tablesize and \
        not getattr(args, 'loadtable', None):
         print_error('''\
 
