@@ -1,3 +1,9 @@
+2015-06-30  Titus Brown  <titus@idyll.org>
+
+   * khmer/khmer_args.py: removed incorrect warning for default max_tablesize
+   when -M is used.
+   * tests/test_scripts.py: added test for correct max_tablesize behavior.
+
 2015-06-29  Sherine Awad  <drmahmoud@ucdavis.edu>
 
    * Fix bug in naming in interleave-reads.py
